# nworth

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml
.github/workflows/: ci.yml
migrations/: 0001_initial_schema.sql  0002_seed_reference_data.sql  0003_expand_schema.sql  0004_seed_expanded_reference_data.sql  0005_market_mode_targets.sql  0006_expense_categories_labels.sql  0007_owned_vs_investment.sql  0008_owned_asset_type.sql  0009_drop_car_allocation_target.sql  0010_rename_car_to_physical_holdings.sql  0011_account_role_enum.sql  0012_account_type_wallet.sql  0013_account_type_credit.sql  0014_asset_last_price.sql  0015_settings_table.sql  0016_drop_assets_target_pct.sql  0017_drop_assets_is_stable.sql  0018_positions_apy_pct.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/models/: account.rs  asset.rs  expense.rs  income.rs  mod.rs  snapshot.rs
src/routes/: accounts.rs  api.rs  assets.rs  cash.rs  crud.rs  crypto.rs  dashboard.rs  data.rs  docs.rs  expenses.rs  flow.rs  guide.rs  income.rs  insights.rs  mod.rs  positions.rs  rest.rs  settings.rs  stocks.rs  targets.rs  wealth.rs
src/services/: fx.rs  mod.rs  prices.rs  solana.rs
templates/: account_detail.html  accounts.html  assets.html  base.html  cash.html  crypto.html  dashboard.html  data.html  expenses.html  flow.html  guide.html  income.html  positions.html  settings.html  stocks.html  swagger.html  targets.html  wealth.html
tests/: api.rs  rest_api.rs
